--- a/device/dell/x86_64-dell_s6000_s1220-r0/Force10-S6000/port_config.ini
+++ b/device/dell/x86_64-dell_s6000_s1220-r0/Force10-S6000/port_config.ini
@@ -1,33 +1,33 @@
-# name          lanes             alias
-Ethernet0       29,30,31,32       fortyGigE0/0
-Ethernet4       25,26,27,28       fortyGigE0/4
-Ethernet8       37,38,39,40       fortyGigE0/8
-Ethernet12      33,34,35,36       fortyGigE0/12
-Ethernet16      41,42,43,44       fortyGigE0/16
-Ethernet20      45,46,47,48       fortyGigE0/20
-Ethernet24      5,6,7,8           fortyGigE0/24
-Ethernet28      1,2,3,4           fortyGigE0/28
-Ethernet32      9,10,11,12        fortyGigE0/32
-Ethernet36      13,14,15,16       fortyGigE0/36
-Ethernet40      21,22,23,24       fortyGigE0/40
-Ethernet44      17,18,19,20       fortyGigE0/44
-Ethernet48      49,50,51,52       fortyGigE0/48
-Ethernet52      53,54,55,56       fortyGigE0/52
-Ethernet56      61,62,63,64       fortyGigE0/56
-Ethernet60      57,58,59,60       fortyGigE0/60
-Ethernet64      65,66,67,68       fortyGigE0/64
-Ethernet68      69,70,71,72       fortyGigE0/68
-Ethernet72      77,78,79,80       fortyGigE0/72
-Ethernet76      73,74,75,76       fortyGigE0/76
-Ethernet80      105,106,107,108   fortyGigE0/80
-Ethernet84      109,110,111,112   fortyGigE0/84
-Ethernet88      117,118,119,120   fortyGigE0/88
-Ethernet92      113,114,115,116   fortyGigE0/92
-Ethernet96      121,122,123,124   fortyGigE0/96
-Ethernet100     125,126,127,128   fortyGigE0/100
-Ethernet104     85,86,87,88       fortyGigE0/104
-Ethernet108     81,82,83,84       fortyGigE0/108
-Ethernet112     89,90,91,92       fortyGigE0/112
-Ethernet116     93,94,95,96       fortyGigE0/116
-Ethernet120     97,98,99,100      fortyGigE0/120
-Ethernet124     101,102,103,104   fortyGigE0/124
+# name          lanes             alias             speed
+Ethernet0       29,30,31,32       fortyGigE0/2      40000
+Ethernet4       25,26,27,28       fortyGigE0/6      40000
+Ethernet8       37,38,39,40       fortyGigE0/10     40000
+Ethernet12      33,34,35,36       fortyGigE0/14     40000
+Ethernet16      41,42,43,44       fortyGigE0/18     40000
+Ethernet20      45,46,47,48       fortyGigE0/22     40000
+Ethernet24      5,6,7,8           fortyGigE0/26     40000
+Ethernet28      1,2,3,4           fortyGigE0/30     40000
+Ethernet32      9,10,11,12        fortyGigE0/34     40000
+Ethernet36      13,14,15,16       fortyGigE0/38     40000
+Ethernet40      21,22,23,24       fortyGigE0/42     40000
+Ethernet44      17,18,19,20       fortyGigE0/46     40000
+Ethernet48      49,50,51,52       fortyGigE0/50     40000
+Ethernet52      53,54,55,56       fortyGigE0/54     40000
+Ethernet56      61,62,63,64       fortyGigE0/58     40000
+Ethernet60      57,58,59,60       fortyGigE0/62     40000
+Ethernet64      65,66,67,68       fortyGigE0/66     40000
+Ethernet68      69,70,71,72       fortyGigE0/70     40000
+Ethernet72      77,78,79,80       fortyGigE0/74     40000
+Ethernet76      73,74,75,76       fortyGigE0/78     40000
+Ethernet80      105,106,107,108   fortyGigE0/82     40000
+Ethernet84      109,110,111,112   fortyGigE0/86     40000
+Ethernet88      117,118,119,120   fortyGigE0/90     40000
+Ethernet92      113,114,115,116   fortyGigE0/94     40000
+Ethernet96      121,122,123,124   fortyGigE0/98     40000
+Ethernet100     125,126,127,128   fortyGigE0/102    40000
+Ethernet104     85,86,87,88       fortyGigE0/106    40000
+Ethernet108     81,82,83,84       fortyGigE0/110    40000
+Ethernet112     89,90,91,92       fortyGigE0/114    40000
+Ethernet116     93,94,95,96       fortyGigE0/118    40000
+Ethernet120     97,98,99,100      fortyGigE0/122    40000
+Ethernet124     101,102,103,104   fortyGigE0/126    40000
